# latexml-runner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: CI.yml
src/: harness.rs  lib.rs  main.rs  server.rs
tests/: large_file.rs  single_directory.rs  single_file.rs  very_large_file.rs
tests/data/: equations.csv  mixed.csv  mixed_16k.csv  single.csv  sqrts_40x.csv
tests/data/sample_dir/: equations.csv  mixed.csv  single.csv  sqrts_40x.csv
