[package]
name = "latexml-rust"
version = "0.1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "latexml_runner"
[[bin]]
name = "latexml_runner"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"
csv = "1.1.5"
clap = "2.33.3"
rayon = "1.5.0"
which = "4.0.0"
crossbeam = "0.8.0"
itertools = "0.9.0"
urlencoding = "1.1.1"
serde_json = "1.0.0"
serde = {version="1.0.0",  features = ["derive"] }

[build-dependencies]
which = "4.0.0"
