[package]
name = "latexml-runner"
version = "0.1.1"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2018"
description = "Rust runner for high-performance TeX to HTML conversions with latexml"
homepage = "https://github.com/dginev/latexml-runner"
repository = "https://github.com/dginev/latexml-runner"
readme = "README.md"
license = "MIT"
keywords = ["latex", "conversion", "cli","html5", "mathml"]
categories = ["command-line-utilities"]
exclude = ["tests/scratch/*"]

[lib]
name = "latexml_runner"
[[bin]]
name = "latexml_runner"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"
csv = "1.1.5"
clap = "2.33.3"
rayon = "1.5.0"
which = "4.0.0"
crossbeam = "0.8.0"
itertools = "0.9.0"
urlencoding = "1.1.1"
serde_json = "1.0.0"
serde = {version="1.0.0",  features = ["derive"] }

[build-dependencies]
which = "4.0.0"
